--- a/pom.xml
+++ b/pom.xml
@@ -6,10 +6,10 @@
 	<groupId>eu.daiad</groupId>
 	<artifactId>web-home</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+    <packaging>jar</packaging>
 
 	<properties>
 		<java-version>1.7</java-version>
-		<!-- <tomcat.version>7.0.59</tomcat.version> -->
 	</properties>
 
 	<parent>
@@ -76,6 +76,12 @@
 			<groupId>joda-time</groupId>
 			<artifactId>joda-time</artifactId>
 		</dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-tomcat</artifactId>
+            <scope>provided</scope>
+        </dependency>
 	</dependencies>
 
 	<build>
