Added support for Amphiro b1

--- a/src/main/resources/config/application.properties
+++ b/src/main/resources/config/application.properties
@@ -1,13 +1,10 @@
-#server.port=80
+server.port=8888
 
 spring.main.show_banner=false
 
 logging.config=classpath:/log4j.properties
 
 custom.security.user.name=Demo User
-
-security.user.name=daiad
-security.user.password=daiad
 
 logging.level.root=INFO
 logging.level.eu.daiad.web=INFO
@@ -17,10 +14,6 @@ security.basic.enabled=false
 
 spring.thymeleaf.cache=false
 
-hbase.data.swm.table=swm
-hbase.data.amphiro.table=meter
-hbase.data.amphiro.column-family=m
-
-hbase.zookeeper.quorum=daiad-dev
-
 spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
+
+hbase.properties=classpath:/config/hbase.properties
