--- a/pom.xml
+++ b/pom.xml
@@ -4,20 +4,47 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>eu.daiad</groupId>
-	<artifactId>web-home</artifactId>
+	<artifactId>home-web</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
     <packaging>jar</packaging>
 
 	<properties>
 		<java-version>1.7</java-version>
+		<jackson.version>2.5.4</jackson.version>
 	</properties>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>1.2.1.RELEASE</version>
+		<version>1.2.4.RELEASE</version>
 	</parent>
-
+<!-- 
+	<repositories>
+	   <repository>
+	       <id>sonatype-nexus</id>
+	       <name>Kundera Public Repository</name>
+	       <url>https://oss.sonatype.org/content/repositories/releases</url>
+	       <releases>
+    	       <enabled>true</enabled>
+	       </releases>
+	       <snapshots>
+	           <enabled>false</enabled>
+	       </snapshots>
+	   </repository>
+	   <repository>
+	       <id>kundera-missing</id>
+	       <name>Kundera Public Missing Resources Repository</name>
+	       <url>http://kundera.googlecode.com/svn/maven2/maven-missing-resources</url>
+	       <releases>
+	           <enabled>true</enabled>
+	       </releases>
+	       <snapshots>
+	           <enabled>true</enabled>
+	       </snapshots>
+	   </repository>
+	</repositories>
+ -->
+ 
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -76,6 +103,19 @@
 			<groupId>joda-time</groupId>
 			<artifactId>joda-time</artifactId>
 		</dependency>
+        <dependency>
+            <groupId>com.impetus.kundera.client</groupId>
+            <artifactId>kundera-hbase-v2</artifactId>
+            <version>2.17</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-joda</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-batch</artifactId>
+        </dependency>
         <!--
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -87,6 +127,14 @@
 
 	<build>
 		<plugins>
+            <plugin>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>1.7</source>
+                    <target>1.7</target>
+                </configuration>
+            </plugin>
+
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
