Updated storage scheme
First implementation of data export

--- a/src/main/resources/config/application.properties
+++ b/src/main/resources/config/application.properties
@@ -4,8 +4,6 @@ spring.main.show_banner=false
 
 logging.config=classpath:/log4j.properties
 
-custom.security.user.name=Demo User
-
 logging.level.root=INFO
 logging.level.eu.daiad.web=INFO
 logging.level.org.springframework.security=INFO
@@ -17,3 +15,5 @@ spring.thymeleaf.cache=false
 spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
 
 hbase.properties=classpath:/config/hbase.properties
+
+tmp.folder=/tmp/web
