--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,5 +1,5 @@
 # Root logger option
-log4j.rootLogger=INFO, console, file
+log4j.rootLogger=WARN, console, file
  
 # console
 log4j.appender.console=org.apache.log4j.ConsoleAppender
@@ -9,8 +9,6 @@ log4j.appender.console.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{
 
 # file
 log4j.appender.file=org.apache.log4j.RollingFileAppender
- 
-
 log4j.appender.file.File=logs/daiad.txt
 log4j.appender.file.MaxFileSize=10MB
 log4j.appender.file.MaxBackupIndex=10
@@ -18,4 +16,4 @@ log4j.appender.file.layout=org.apache.log4j.PatternLayout
 log4j.appender.file.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
 
 # categories
-log4j.category.eu.daiad.web=INFO
+log4j.category.eu.daiad.web=WARN
