--- a/src/main/resources/config/application.properties
+++ b/src/main/resources/config/application.properties
@@ -4,6 +4,10 @@ spring.main.show_banner=false
 
 logging.config=classpath:/log4j.properties
 
+logging.level.root=INFO
+logging.level.eu.daiad.web=WARN
+logging.level.org.springframework.security=WARN
+
 security.basic.enabled=false
 
 spring.thymeleaf.cache=false
@@ -12,4 +16,6 @@ spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
 
 hbase.properties=classpath:/config/hbase.properties
 
-tmp.folder=/tmp/web
+tmp.folder=/tmp
+
+arduino.device.default = 
