Created separate development and production profiles
Moved utility scripts to a separate folder

--- a/src/main/resources/config/application.properties
+++ b/src/main/resources/config/application.properties
@@ -1,5 +1,4 @@
-# Server port
-server.port=8888
+spring.profiles.active=development
 
 # Hide Spring boot banner
 spring.main.show_banner=false
@@ -33,11 +32,3 @@ spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.DefaultNamingStrategy
 
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.hbm2ddl.auto=validate
-
-
-# Datasource configuration
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/daiad-manager
-spring.datasource.name=daiad-manager
-spring.datasource.username=daiad
-spring.datasource.password=daiad
