--- a/bower.json
+++ b/bower.json
@@ -4,7 +4,8 @@
   "dependencies": {
     "jquery": "~2.1.3",
     "bootstrap": "~3.3.6",
-    "bootstrap-select": "~1.9.4"
+    "bootstrap-select": "~1.9.4",
+    "leaflet": "~0.7.7"
   },
   "private": true,
   "ignore": [
