--- a/package.json
+++ b/package.json
@@ -7,16 +7,21 @@
     "url": "https://github.com/DAIAD/home-web.git"
   },
   "dependencies": {
-    "react": "~0.14.6",
-    "react-dom": "~0.14.6",
-    "react-bootstrap": "~0.28.2",
-    "flux": "~2.1.1",
+    "bootstrap-select": "~1.9.4",
+    "echarts": "^3.0.2",
     "events": "~1.1.0",
-    "object-assign": "~4.0.1",
-    "keymirror": "~0.1.1",
+    "flux": "~2.1.1",
     "jquery": "~2.2.0",
+    "keymirror": "~0.1.1",
+    "leaflet": "^0.7.7",
+    "leaflet.heat": "^0.2.0",
+    "lodash": "~4.0.1",
+    "object-assign": "~4.0.1",
+    "react": "~0.14.6",
+    "react-bootstrap": "^0.28.2",
+    "react-dom": "~0.14.6",
     "react-intl": "^2.0.0-beta-2",
-    "bootstrap-select": "~1.9.4"
+    "grunt-contrib-concat": "~0.5.1"
   },
   "scripts": {
     "build": "grunt build"
@@ -50,16 +55,22 @@
     "babel-plugin-react-intl": "~2.0.0",
     "babel-preset-es2015": "~6.3.13"
   },
-  "babelify" :{
+  "babelify": {
     "presets": [
       "es2015",
       "react"
     ],
     "plugins": [
-      ["react-intl", {
-         "messagesDir": "./src/main/resources/public/assets/js/src/utility/i18n/",
-         "enforceDescriptions": false
-      }]
+      [
+        "react-intl",
+        {
+          "messagesDir": "./src/main/resources/public/assets/js/src/utility/i18n/",
+          "enforceDescriptions": false
+        }
+      ]
     ]
+  },
+  "browserify-shim": {
+	"echarts" : "global:echarts"
   }
 }
