removed bundle files

--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@ node
 node_modules
 npm-debug.log
 src/main/resources/config
+src/main/resources/public/assets/js/build
 
 bower_components
 jspm_packages
