--- a/package.json
+++ b/package.json
@@ -27,33 +27,33 @@
     "build": "grunt build"
   },
   "devDependencies": {
-    "bower": "~1.7.2",
-    "grunt": "~0.4.5",
-    "grunt-cli": "~0.1.13",
-    "grunt-contrib-clean": "~0.7.0",
-    "grunt-contrib-jshint": "~0.11.3",
-    "grunt-browserify": "~4.0.1",
-    "grunt-contrib-uglify": "~0.11.0",
-    "grunt-contrib-copy": "~0.8.2",
-    "jshint-stylish": "~2.1.0",
-    "grunt-jsxhint": "~0.6.0",
-    "react-tools": "~0.13.3",
-    "browserify": "~13.0.0",
-    "babelify": "~7.2.0",
+    "babel": "~6.3.26",
+    "babel-cli": "~6.4.5",
+    "babel-core": "~6.4.5",
+    "babel-plugin-react-intl": "~2.0.0",
+    "babel-preset-es2015": "~6.3.13",
     "babel-preset-react": "~6.3.13",
-    "reactify": "~1.1.1",
+    "babelify": "~7.2.0",
+    "bootstrap": "^3.3.6",
+    "browserify": "~13.0.0",
+    "browserify-shim": "~3.8.12",
     "envify": "~3.4.0",
     "exorcist": "~0.4.0",
-    "watchify": "~3.7.0",
-    "grunt-exorcise": "~2.1.0",
+    "grunt": "~0.4.5",
+    "grunt-browserify": "~4.0.1",
+    "grunt-cli": "~0.1.13",
+    "grunt-contrib-clean": "~0.7.0",
+    "grunt-contrib-copy": "~0.8.2",
+    "grunt-contrib-jshint": "~0.11.3",
+    "grunt-contrib-uglify": "~0.11.0",
     "grunt-contrib-watch": "~0.6.1",
+    "grunt-exorcise": "~2.1.0",
+    "grunt-jsxhint": "~0.6.0",
     "grunt-sync": "~0.5.1",
-    "browserify-shim": "~3.8.12",
-    "babel": "~6.3.26",
-    "babel-core": "~6.4.5",
-    "babel-cli": "~6.4.5",
-    "babel-plugin-react-intl": "~2.0.0",
-    "babel-preset-es2015": "~6.3.13"
+    "jshint-stylish": "~2.1.0",
+    "react-tools": "~0.13.3",
+    "reactify": "~1.1.1",
+    "watchify": "~3.7.0"
   },
   "babelify": {
     "presets": [
@@ -71,6 +71,6 @@
     ]
   },
   "browserify-shim": {
-	"echarts" : "global:echarts"
+    "echarts": "global:echarts"
   }
 }
