Configured dependencies for hibernate spatial 4.3
Updated common properties for hibernate in application.properties

Allowed access to paths /home/** and /utility/** for react router

Updated request mappings for /home/** and /utility/**

Updated database schema for static recommendations

Updated database schema for dynamic recommendations

Updated database schema for alerts

Updated database schema for utility announcements

--- a/src/main/resources/config/application.properties
+++ b/src/main/resources/config/application.properties
@@ -24,11 +24,11 @@ tmp.folder=/tmp
 
 # JPA configuration
 spring.jpa.database=POSTGRESQL
-spring.jpa.show-sql=true
-spring.jpa.generate-ddl=false
-spring.jpa.hibernate.ddl-auto=none
+
 
 spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.DefaultNamingStrategy
 
+spring.jpa.properties.hibernate.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.hbm2ddl.auto=validate
+spring.jpa.properties.hibernate.dialect = org.hibernate.spatial.dialect.postgis.PostgisDialect
