--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,8 @@
 		<java-version>1.7</java-version>
 		<jackson.version>2.5.4</jackson.version>
 		<hbase.version>1.0.0</hbase.version>
-		<hibernate-spatial.version>5.0.6.Final</hibernate-spatial.version>
+		<geotools.version>14</geotools.version>
+		<hibernate-spatial.version>4.3</hibernate-spatial.version>
 	</properties>
 
 	<parent>
@@ -22,6 +23,20 @@
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>1.3.1.RELEASE</version>
 	</parent>
+
+	<repositories>
+		<repository>
+			<id>Hibernate Spatial 4.X repository</id>
+			<url>http://www.hibernatespatial.org/repository</url>
+		</repository>
+
+		<repository>
+			<id>osgeo</id>
+			<name>Open Source Geospatial Foundation Repository</name>
+			<url>http://download.osgeo.org/webdav/geotools/</url>
+		</repository>
+
+	</repositories>
 
 	<dependencies>
 		<dependency>
@@ -33,6 +48,11 @@
 					<artifactId>spring-boot-starter-logging</artifactId>
 				</exclusion>
 			</exclusions>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-log4j</artifactId>
 		</dependency>
 
 		<dependency>
@@ -62,11 +82,6 @@
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-log4j</artifactId>
-		</dependency>
-
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-security</artifactId>
 		</dependency>
 
@@ -88,6 +103,25 @@
 		<dependency>
 			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>net.postgis</groupId>
+			<artifactId>postgis-jdbc</artifactId>
+			<version>2.2.0</version>
+
+			<exclusions>
+				<exclusion>
+					<groupId>ch.qos.logback</groupId>
+					<artifactId>logback-classic</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>ch.qos.logback</groupId>
+					<artifactId>logback-core</artifactId>
+				</exclusion>
+
+			</exclusions>
+
 		</dependency>
 
 		<dependency>
@@ -118,17 +152,11 @@
 		</dependency>
 
 		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-tomcat</artifactId>
-			<scope>provided</scope>
-		</dependency>
-        <!--
-		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-spatial</artifactId>
 			<version>${hibernate-spatial.version}</version>
 		</dependency>
-        -->
+
 	</dependencies>
 
 	<build>
