--- a/package.json
+++ b/package.json
@@ -23,7 +23,10 @@
     "react-bootstrap": "^0.28.2",
     "react-dom": "~0.14.6",
     "react-intl": "^2.0.0-beta-2",
-    "react-router": "^1.0.3"
+    "react-redux": "^4.4.0",
+    "react-router": "^1.0.3",
+    "redux": "^3.3.1",
+    "redux-thunk": "^1.0.3"
   },
   "browserify": {
     "transform": [
