--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "react-router-bootstrap": "~0.20.1",
     "redux-thunk": "~1.0.3",
     "history": "~2.0.0",
-    "es6-promise": "~3.0.2"
+    "es6-promise": "~3.0.2",
+    "react-scroll-up": "~1.1.2"
   },
   "scripts": {
     "build": "grunt build"
