Create mockups for all pages
Created mockups for all application pages with sample data.
Implemented default configuration selection for Amphiro devices.

--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,5 @@ jspm_packages
 
 src/main/resources/log4j.properties
 src/main/resources/config/*.properties
+
+src/main/resources/public/assets/images/demo
