--- a/package.json
+++ b/package.json
@@ -8,11 +8,14 @@
   },
   "dependencies": {
     "bootstrap-select": "~1.9.4",
+    "classnames": "^2.2.3",
+    "clone": "~1.0.2",
     "echarts": "^3.0.2",
+    "es6-promise": "~3.0.2",
     "events": "~1.1.0",
     "flux": "~2.1.1",
     "grunt-contrib-concat": "~0.5.1",
-    "history": "^1.17.0",
+    "history": "~2.0.0",
     "jquery": "~2.2.0",
     "keymirror": "~0.1.1",
     "leaflet": "^0.7.7",
@@ -23,16 +26,13 @@
     "react-bootstrap": "^0.28.2",
     "react-dom": "~0.14.6",
     "react-intl": "^2.0.0-beta-2",
-    "clone": "~1.0.2",
-    "redux": "~3.3.1",
     "react-redux": "~4.4.0",
     "react-router": "~2.0.0",
-    "react-router-redux": "~3.0.0",
     "react-router-bootstrap": "~0.20.1",
-    "redux-thunk": "~1.0.3",
-    "history": "~2.0.0",
-    "es6-promise": "~3.0.2",
-    "react-scroll-up": "~1.1.2"
+    "react-router-redux": "~3.0.0",
+    "react-scroll-up": "~1.1.2",
+    "redux": "~3.3.1",
+    "redux-thunk": "~1.0.3"
   },
   "scripts": {
     "build": "grunt build",
@@ -42,6 +42,7 @@
     "babel": "~6.3.26",
     "babel-cli": "~6.4.5",
     "babel-core": "~6.4.5",
+    "babel-polyfill": "^6.0.16",
     "babel-plugin-react-intl": "~2.0.0",
     "babel-preset-es2015": "~6.3.13",
     "babel-preset-react": "~6.3.13",
@@ -68,6 +69,7 @@
     "reactify": "~1.1.1",
     "watchify": "~3.7.0",
     "redux-devtools": "~3.1.1",
+    "redux-logger": "^2.5.2",
     "babel-preset-stage-2": "~6.5.0"
   },
   "babelify": {
