--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "events": "~1.1.0",
     "flux": "~2.1.1",
     "history": "~2.0.0",
+    "isomorphic-fetch": "^2.2.1",
     "jquery": "^1.12.1",
     "keymirror": "~0.1.1",
     "leaflet": "^0.7.7",
