--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "react-redux": "~4.4.0",
     "react-router": "~2.0.0",
     "react-router-bootstrap": "~0.20.1",
-    "react-router-redux": "~3.0.0",
+    "react-router-redux": "4.0.0",
     "react-scroll-up": "~1.1.2",
     "react-select": "~1.0.0-beta9",
     "redux": "~3.3.1",
