--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "react-bootstrap-datetimepicker": "0.0.22",
     "react-dom": "~0.14.6",
     "react-grid-layout": "^0.10.8",
-    "react-intl": "^2.0.0-beta-2",
+    "react-intl": "2.0.0-beta-2",
     "react-redux": "~4.4.0",
     "react-router": "~2.0.0",
     "react-router-bootstrap": "~0.20.1",
@@ -39,7 +39,8 @@
     "react-scroll-up": "~1.1.2",
     "react-select": "~1.0.0-beta9",
     "redux": "~3.3.1",
-    "redux-thunk": "~1.0.3"
+    "redux-thunk": "~1.0.3",
+    "react-addons-pure-render-mixin": "0.14.8"
   },
   "scripts": {
     "build": "NODE_ENV=production grunt build",
