--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "react-bootstrap-datetimepicker": "0.0.22",
     "react-dom": "~0.14.6",
     "react-grid-layout": "^0.10.8",
-    "react-intl": "^2.0.0-beta-2",
+    "react-intl": "~2.0.0-rc-1",
     "react-redux": "~4.4.0",
     "react-router": "~2.0.0",
     "react-router-bootstrap": "~0.20.1",
