Initial implementation of trial status reports
Fixed several typos.
Smart Water Meter registration is allowed only for administrators.
Updated default configuration files.
Added utility unique id property to authenticated user class. The property value is set during the user authentication process.
Created new methods in user repository for accessing account white list entries.
Added profile save/load support for DAIAD@home (web) and DAIAD@utility applications.
Added new field registered_on to table device.
Added new field last_upload_success_on to table device.
Added new field last_upload_failure_on to table device.
Create new view trial_account_activity.
Implemented DAIAD@utility section for monitoring trial user’s activity such as sign up, sign in, device registration, data uploading etc.

--- a/configuration/config/batch.properties
+++ b/configuration/config/batch.properties
@@ -1,10 +1,14 @@
-# Spring boot batch auto configuration
+# Disable automatic execution of registered beans
 spring.batch.job.enabled=false
 
+# Initialize Spring Batch database schema
 spring.batch.initializer.enabled=true
-spring.batch.schema=classpath:/config/sql/batch/schema-postgresql.sql
 
+# Schema creation script location
+spring.batch.schema=classpath:config/sql/batch/schema-postgresql.sql
+
+# Prefix used by Spring Batch job repository for schema objects
 spring.batch.table-prefix=batch.
 
-#batch.database.incrementer.class=org.springframework.jdbc.support.incrementer.PostgreSQLSequenceMaxValueIncrementer
-#batch.database.incrementer.parent=sequenceIncrementerParent
+# Sequence name for DataSourceJobParametersIncrementer implementation
+job.parameters.incrementer.name=incrementer
