Add helper actions for debugging and development
Removed unused classes.
Updated form for assigning smart water meters to users.
Implemented new form for loading files with smart water measurements manually.
Added new fields to account profile. Updated SQL scripts and domain model.
Created helper actions for (a) registering all users in the white list, (b) creating an Amphiro device for all registered users who have not yet registered a device and (c) import random Amphiro sessions for every device that has no sessions.

--- a/configuration/config/application.properties
+++ b/configuration/config/application.properties
@@ -37,3 +37,7 @@ spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.DefaultNamingStrategy
 
 # Default error page
 error-page=/error/403
+
+# Upload file limits
+multipart.maxFileSize=20Mb
+multipart.maxRequestSize=20Mb
