--- a/configuration/config/hbase.properties
+++ b/configuration/config/hbase.properties
@@ -26,4 +26,4 @@ zookeeper.session.timeout=60000
 hbase.data.time.partitions=1
 
 # Number of rows for caching that will be passed to scanners
-scanner-cache-size=1000
+scanner.cache.size=1000
