--- a/configuration/log4j.properties
+++ b/configuration/log4j.properties
@@ -1,11 +1,11 @@
 # Root logger option
-log4j.rootLogger=INFO, console, file
+log4j.rootLogger=WARN, console, file
  
 # console
 log4j.appender.console=org.apache.log4j.ConsoleAppender
 log4j.appender.console.Target=System.out
 log4j.appender.console.layout=org.apache.log4j.PatternLayout
-log4j.appender.console.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L --- %m%n
+log4j.appender.console.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %20X{session.remote-address} %20X{session.username} %-5p %c{1}:%L : %m%n
 
 # file
 log4j.appender.file=org.apache.log4j.RollingFileAppender
