--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "react-select": "~1.0.0-beta9",
     "redux": "~3.3.1",
     "redux-thunk": "~1.0.3",
-    "react-addons-pure-render-mixin": "0.14.8"
+    "react-addons-pure-render-mixin": "0.14.8",
+    "react-checkbox-group": "~1.0.4"
   },
   "scripts": {
     "build": "NODE_ENV=production grunt build",
