--- a/.gitignore
+++ b/.gitignore
@@ -31,4 +31,4 @@ jspm_packages
 src/main/resources/log4j.properties
 src/main/resources/config/*.properties
 
-src/main/resources/public/assets/images/demo
+apidoc/docs
