--- a/package.json
+++ b/package.json
@@ -79,7 +79,8 @@
     "reactify": "~1.1.1",
     "redux-devtools": "~3.1.1",
     "redux-logger": "^2.5.2",
-    "watchify": "~3.7.0"
+    "watchify": "~3.7.0",
+    "grunt-apidoc": "~0.11.0"
   },
   "babelify": {
     "presets": [
