Implement database migration
Database automatic migration has been implemented using Flyway (https://flywaydb.org/).

--- a/configuration/config/batch.properties
+++ b/configuration/config/batch.properties
@@ -2,10 +2,10 @@
 spring.batch.job.enabled=false
 
 # Initialize Spring Batch database schema
-spring.batch.initializer.enabled=true
+spring.batch.initializer.enabled=false
 
 # Schema creation script location
-spring.batch.schema=classpath:config/sql/batch/schema-postgresql.sql
+spring.batch.schema=classpath:db/migration/daiad-manager/V1_0_1__Initialize_Spring_Batch_database.sql
 
 # Prefix used by Spring Batch job repository for schema objects
 spring.batch.table-prefix=batch.
