--- a/pom.xml
+++ b/pom.xml
@@ -191,6 +191,12 @@
 			<version>${apache.poi.version}</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.flywaydb</groupId>
+			<artifactId>flyway-core</artifactId>
+			<version>4.0.1</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
