--- a/configuration/config/application.properties
+++ b/configuration/config/application.properties
@@ -41,3 +41,14 @@ error-page=/error/403
 # Upload file limits
 multipart.maxFileSize=20Mb
 multipart.maxRequestSize=20Mb
+
+# Disable automatic database migration
+flyway.enabled=false
+
+daiad.flyway.baseline-description= Database initialization
+daiad.flyway.baseline-version=1_0_0
+daiad.flyway.locations=classpath:db/migration/daiad/
+
+daiad.manager.flyway.baseline-description= Database initialization
+daiad.manager.flyway.baseline-version=1_0_2
+daiad.manager.flyway.locations=classpath:db/migration/daiad-manager/
