--- a/configuration/log4j.properties
+++ b/configuration/log4j.properties
@@ -5,7 +5,7 @@ log4j.rootLogger=WARN, console, file
 log4j.appender.console=org.apache.log4j.ConsoleAppender
 log4j.appender.console.Target=System.out
 log4j.appender.console.layout=org.apache.log4j.PatternLayout
-log4j.appender.console.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %20X{session.remote-address} %20X{session.username} %-5p %c{1}:%L : %m%n
+log4j.appender.console.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %20X{session.remote-address} %20X{session.username} %-5p %c{1}:%L - %m%n
 
 # file
 log4j.appender.file=org.apache.log4j.RollingFileAppender
@@ -13,4 +13,4 @@ log4j.appender.file.File=logs/daiad.txt
 log4j.appender.file.MaxFileSize=10MB
 log4j.appender.file.MaxBackupIndex=10
 log4j.appender.file.layout=org.apache.log4j.PatternLayout
-log4j.appender.file.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
+log4j.appender.file.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %20X{session.remote-address} %20X{session.username} %-5p %c{1}:%L - %m%n
