--- a/pom.xml
+++ b/pom.xml
@@ -12,23 +12,23 @@
 
 	<properties>
 		<java-version>1.7</java-version>
+		<spring.boot.version>1.4.0.M3</spring.boot.version>
 		<jackson.version>2.5.4</jackson.version>
 		<hbase.version>1.0.0</hbase.version>
 		<geotools.version>14.2</geotools.version>
-		<hibernate-spatial.version>4.3</hibernate-spatial.version>
+		<hibernate-spatial.version>5.1.0.Final</hibernate-spatial.version>
 		<apache.poi.version>3.14</apache.poi.version>
+		<org.jadira.usertype.version>5.0.0.GA</org.jadira.usertype.version>
 	</properties>
-
-	<parent>
-		<groupId>org.springframework.boot</groupId>
-		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>1.3.3.RELEASE</version>
-	</parent>
 
 	<repositories>
 		<repository>
-			<id>Hibernate Spatial 4.X repository</id>
-			<url>http://www.hibernatespatial.org/repository</url>
+			<id>spring-milestones</id>
+			<name>Spring Milestones</name>
+			<url>https://repo.spring.io/libs-milestone</url>
+			<snapshots>
+				<enabled>false</enabled>
+			</snapshots>
 		</repository>
 
 		<repository>
@@ -36,8 +36,24 @@
 			<name>Open Source Geospatial Foundation Repository</name>
 			<url>http://download.osgeo.org/webdav/geotools/</url>
 		</repository>
-
 	</repositories>
+
+	<pluginRepositories>
+		<pluginRepository>
+			<id>spring-milestones</id>
+			<name>Spring Milestones</name>
+			<url>http://repo.spring.io/milestone</url>
+			<snapshots>
+				<enabled>false</enabled>
+			</snapshots>
+		</pluginRepository>
+	</pluginRepositories>
+
+	<parent>
+		<groupId>org.springframework.boot</groupId>
+		<artifactId>spring-boot-starter-parent</artifactId>
+		<version>1.4.0.M3</version>
+	</parent>
 
 	<dependencies>
 		<dependency>
@@ -54,6 +70,7 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-log4j</artifactId>
+			<version>1.3.5.RELEASE</version>
 		</dependency>
 
 		<dependency>
@@ -105,9 +122,7 @@
 					<groupId>ch.qos.logback</groupId>
 					<artifactId>logback-core</artifactId>
 				</exclusion>
-
 			</exclusions>
-
 		</dependency>
 
 		<dependency>
@@ -134,9 +149,10 @@
 		<dependency>
 			<groupId>org.jadira.usertype</groupId>
 			<artifactId>usertype.core</artifactId>
-			<version>4.0.0.GA</version>
+			<version>${org.jadira.usertype.version}</version>
 		</dependency>
 
+		<!-- http://mvnrepository.com/artifact/org.hibernate/hibernate-spatial -->
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-spatial</artifactId>
@@ -254,9 +270,10 @@
 							<arguments>run build</arguments>
 						</configuration>
 					</execution>
-
 				</executions>
+
 			</plugin>
 		</plugins>
+
 	</build>
 </project>
