Remove unnecessary dependencies
postgresql:postgresql dependency of net.postgis:postgis-jdbc was causing problems to Spring Boot plugin execution.

--- a/pom.xml
+++ b/pom.xml
@@ -115,6 +115,10 @@
 
 			<exclusions>
 				<exclusion>
+					<groupId>postgresql</groupId>
+					<artifactId>postgresql</artifactId>
+				</exclusion>
+				<exclusion>
 					<groupId>ch.qos.logback</groupId>
 					<artifactId>logback-classic</artifactId>
 				</exclusion>
