--- a/configuration/config/application.properties
+++ b/configuration/config/application.properties
@@ -5,7 +5,7 @@ spring.profiles.active=development
 spring.main.show_banner=false
 
 # Log4j configuration properties
-logging.config=classpath:log4j.properties
+logging.config=classpath:log4j2.xml
 
 # HBASE configuration properties source
 hbase.properties=classpath:config/hbase.properties
