--- a/.gitignore
+++ b/.gitignore
@@ -30,6 +30,7 @@ jspm_packages
 *.rar
 
 src/main/resources/log4j.properties
+src/main/resources/log4j2.xml
 src/main/resources/config/*.properties
 
 apidoc/docs
