Add Map Reduce job execution functionality
Implemented Map Reduce job execution using the scheduling service.
Several bug fixes.

--- a/configuration/config/application.properties
+++ b/configuration/config/application.properties
@@ -42,8 +42,8 @@ spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.Ph
 error-page=/error/403
 
 # Upload file limits
-multipart.maxFileSize=20Mb
-multipart.maxRequestSize=20Mb
+spring.http.multipart.max-file-size =20Mb
+spring.http.multipart.max-request-size=20Mb
 
 # Disable automatic database migration
 flyway.enabled=false
