Update project site and documentation

--- a/configuration/config/hbase.properties
+++ b/configuration/config/hbase.properties
@@ -22,7 +22,7 @@ zookeeper.recovery.retry.intervalmill=200
 # connect to the ensemble. It is also used by HBase when it starts a ZK server and it is passed as the 'maxSessionTimeout'.            
 zookeeper.session.timeout=60000
             
-# Number of HBASE region servers that store Amphiro session data order by time
+# Number of HBASE region servers that store time series data
 hbase.data.time.partitions=5
 
 # Number of rows for caching that will be passed to scanners
