--- a/configuration/config/application.properties
+++ b/configuration/config/application.properties
@@ -22,8 +22,8 @@ security.basic.enabled=false
 # Disable thymeleaf view engine cache
 spring.thymeleaf.cache=false
 
-# Temp folder for storing files
-tmp.folder=/tmp/web
+# Temporary folder for storing files
+tmp.folder=/tmp/
 
 # JPA configuration
 spring.jpa.database=POSTGRESQL
