--- a/configuration/config/scheduler.properties
+++ b/configuration/config/scheduler.properties
@@ -1,4 +1,4 @@
-# Number of threads for the ThreadPoolTaskScheduler instance in SchedulerConfig
+# Number of threads for the ThreadPoolTaskScheduler instance
 pool-size=10
 
 # Prefix for thread names for job launcher custom TaskExecutor
