--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-scroll-up": "~1.1.2",
     "react-select": "~1.0.0-beta9",
     "redux": "~3.3.1",
+    "redux-form": "^5.2.5",
     "redux-thunk": "~1.0.3"
   },
   "scripts": {
