Configure utility as a preliminary action before rendering

--- a/configuration/config/application.properties
+++ b/configuration/config/application.properties
@@ -25,6 +25,11 @@ spring.thymeleaf.cache=false
 # Temporary folder for storing files
 tmp.folder=/tmp/
 
+# Server
+server.session.timeout=1800
+server.session.cookie.name=daiad
+server.session.cookie.max-age=3600
+
 # JPA configuration
 spring.jpa.database=POSTGRESQL
 
