Add session expiration detection at the client

--- a/configuration/config/application-production.properties
+++ b/configuration/config/application-production.properties
@@ -1,6 +1,9 @@
 # Server port
 #server.port=
 
+# Enforce HTTPS for the login page
+server.login.force-https=true
+
 # Data source configuration
 datasource.default.driver-class-name=org.postgresql.Driver
 datasource.default.url=jdbc:postgresql://localhost:5432/daiad
