--- a/configuration/config/application-development.properties
+++ b/configuration/config/application-development.properties
@@ -1,6 +1,9 @@
 # Server port
 server.port=8888
 
+# Enforce HTTPS for the login page
+server.login.force-https=false
+
 # Data source configuration
 datasource.default.driver-class-name=org.postgresql.Driver
 datasource.default.url=jdbc:postgresql://localhost:5432/daiad
