Updates to scheduling service and UI
Fixed bug with invalid query parameter name.
Fixed issue with NullPointerException when accessing running job executions.
Add job and execution tables to the UI.

--- a/configuration/config/batch.properties
+++ b/configuration/config/batch.properties
@@ -12,3 +12,6 @@ spring.batch.table-prefix=batch.
 
 # Sequence name for DataSourceJobParametersIncrementer implementation
 job.parameters.incrementer.name=incrementer
+
+# Application server time zone
+daiad.batch.server-time-zone=Europe/Athens
