--- a/package.json
+++ b/package.json
@@ -64,7 +64,9 @@
     "browserify-shim": "~3.8.12",
     "envify": "~3.4.0",
     "exorcist": "~0.4.0",
+    "jsdoc": "^3.4.0",
     "grunt": "~0.4.5",
+    "grunt-apidoc": "~0.11.0",
     "grunt-browserify": "~4.0.1",
     "grunt-cli": "~0.1.13",
     "grunt-contrib-clean": "~0.7.0",
@@ -74,6 +76,7 @@
     "grunt-contrib-uglify": "~0.11.0",
     "grunt-contrib-watch": "~0.6.1",
     "grunt-exorcise": "~2.1.0",
+    "grunt-jsdoc": "^2.1.0",
     "grunt-jsxhint": "~0.6.0",
     "grunt-sync": "~0.5.1",
     "jshint-stylish": "~2.1.0",
@@ -82,8 +85,7 @@
     "reactify": "~1.1.1",
     "redux-devtools": "~3.1.1",
     "redux-logger": "^2.5.2",
-    "watchify": "~3.7.0",
-    "grunt-apidoc": "~0.11.0"
+    "watchify": "~3.7.0"
   },
   "babelify": {
     "presets": [
