--- a/package.json
+++ b/package.json
@@ -88,7 +88,8 @@
     "reactify": "~1.1.1",
     "redux-devtools": "~3.1.1",
     "redux-logger": "^2.5.2",
-    "watchify": "~3.7.0"
+    "watchify": "~3.7.0",
+    "font-awesome": "~4.6.3"
   },
   "babelify": {
     "presets": [
