--- a/.gitignore
+++ b/.gitignore
@@ -18,8 +18,11 @@ node
 node_modules
 npm-debug.log
 src/main/resources/config/*
+
 src/main/resources/public/assets/js/build
 src/main/resources/public/assets/images
+src/main/resources/public/assets/lib
+
 src/main/resources/public/docs
 
 bower_components
