Relax validation rules for Amphiro measurements

--- a/configuration/config/application.properties
+++ b/configuration/config/application.properties
@@ -60,3 +60,6 @@ daiad.flyway.locations=classpath:db/migration/daiad/
 daiad.manager.flyway.baseline-description= Database initialization
 daiad.manager.flyway.baseline-version=1_0_2
 daiad.manager.flyway.locations=classpath:db/migration/daiad-manager/
+
+# Enforce constraints for Amphiro measurements
+daiad.amphiro.validation-string=true
