--- a/pom.xml
+++ b/pom.xml
@@ -373,6 +373,14 @@
 		</dependency>
 
         <!--
+        <dependency>
+            <groupId>org.apache.flink</groupId>
+            <artifactId>flink-clients_2.10</artifactId>
+            <version>1.0.3</version>
+        </dependency>
+        -->
+
+        <!--
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-tomcat</artifactId>
