Add example of map and timeline components
Minor updates to DAIAD@utility updates.

--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,7 @@ src/main/resources/config/*
 src/main/resources/public/assets/js/build
 src/main/resources/public/assets/images
 src/main/resources/public/assets/lib
+src/main/resources/public/assets/data
 
 src/main/resources/public/docs
 
