Ensure timestamps are computed on same timezone as outgoing query

--- a/package.json
+++ b/package.json
@@ -21,11 +21,12 @@
     "jquery": "^1.12.1",
     "keymirror": "~0.1.1",
     "leaflet": "^0.7.7",
+    "leaflet-choropleth": "^1.1.2",
     "leaflet-draw": "~0.2.3",
     "leaflet.heat": "~0.2.0",
-    "leaflet-choropleth": "^1.1.2",
     "lodash": "~4.0.1",
     "moment": "~2.11.2",
+    "moment-timezone": "^0.5.4",
     "numeral": "^1.5.3",
     "object-assign": "~4.0.1",
     "react": "~0.14.6",
