Update documentation generation and access

--- a/configuration/config/application.properties
+++ b/configuration/config/application.properties
@@ -25,11 +25,6 @@ spring.thymeleaf.cache=false
 # Temporary folder for storing files
 tmp.folder=/tmp/
 
-# Server
-server.session.timeout=1800
-server.session.cookie.name=daiad
-server.session.cookie.max-age=3600
-
 # JPA configuration
 spring.jpa.database=POSTGRESQL
 
@@ -63,3 +58,6 @@ daiad.manager.flyway.locations=classpath:db/migration/daiad-manager/
 
 # Enforce constraints for Amphiro measurements
 daiad.amphiro.validation-string=true
+
+# Require authentication for documentation and project site
+daiad.docs.require-authentication=true
