--- a/pom.xml
+++ b/pom.xml
@@ -139,6 +139,12 @@
 		</dependency>
 
 		<dependency>
+		    <groupId>org.springframework.ws</groupId>
+		    <artifactId>spring-xml</artifactId>
+		    <version>2.0.2.RELEASE</version>
+		</dependency>
+
+		<dependency>
 			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
 		</dependency>
