--- a/configuration/config/application.properties
+++ b/configuration/config/application.properties
@@ -1,3 +1,6 @@
+# Deployment URL
+daiad.url=https://app.dev.daiad.eu/
+
 # Set active profile
 spring.profiles.active=development
 
@@ -15,6 +18,9 @@ scheduler.properties=classpath:config/scheduler.properties
 
 # Batch properties source
 batch.properties=classpath:config/batch.properties
+
+# Mail properties source
+mail.properties=classpath:config/mail.properties
 
 # Disable basic authentication
 security.basic.enabled=false
@@ -61,3 +67,6 @@ daiad.amphiro.validation-string=true
 
 # Require authentication for documentation and project site
 daiad.docs.require-authentication=true
+
+# Password reset token duration in hours
+daiad.password.reset.token.duration=3
