--- a/pom.xml
+++ b/pom.xml
@@ -139,6 +139,17 @@
 		</dependency>
 
 		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-mail</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>com.sun.mail</groupId>
+			<artifactId>javax.mail</artifactId>
+			<version>1.5.6</version>
+		</dependency>
+
+		<dependency>
 		    <groupId>org.springframework.ws</groupId>
 		    <artifactId>spring-xml</artifactId>
 		    <version>2.0.2.RELEASE</version>
