Add password reset form
Added new form for resetting user password.

--- a/configuration/config/application.properties
+++ b/configuration/config/application.properties
@@ -70,3 +70,6 @@ daiad.docs.require-authentication=true
 
 # Password reset token duration in hours
 daiad.password.reset.token.duration=3
+
+# The client site key for Google reCAPTCHA API
+daiad.captcha.google.key=
