--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-datetime": "^2.2.1",
     "react-dom": "~0.14.6",
     "react-echarts": "git+https://github.com/DAIAD/react-echarts.git#master",
+    "react-google-recaptcha": "^0.5.4",
     "react-grid-layout": "^0.12.7",
     "react-intl": "~2.0.0-rc-1",
     "react-redux": "~4.4.0",
