--- a/package.json
+++ b/package.json
@@ -61,18 +61,21 @@
     "babel-cli": "~6.16.0",
     "babel-core": "~6.17.0",
     "babel-plugin-react-intl": "~2.2.0",
+    "babel-plugin-react-transform": "^2.0.2",
     "babel-plugin-transform-regenerator": "~6.16.1",
     "babel-polyfill": "~6.16.0",
     "babel-preset-latest": "~6.16.0",
-    "babel-preset-stage-2": "~6.17.0",
     "babel-preset-react": "~v6.16.0",
+    "babel-preset-stage-2": "~6.17.0",
+    "babel-eslint": "~7.0.0",
     "babelify": "~7.3.0",
     "bootstrap": "^3.3.6",
     "browserify": "~13.0.0",
     "browserify-shim": "~3.8.12",
     "envify": "~3.4.0",
+    "eslint-plugin-react": "~6.4.1",
+    "eslintify": "^3.1.0",
     "exorcist": "~0.4.0",
-    "jsdoc": "^3.4.0",
     "font-awesome": "~4.6.3",
     "grunt": "~0.4.5",
     "grunt-apidoc": "~0.11.0",
@@ -83,18 +86,19 @@
     "grunt-contrib-copy": "~0.8.2",
     "grunt-contrib-uglify": "~0.11.0",
     "grunt-contrib-watch": "~0.6.1",
+    "grunt-eslint": "~19.0.0",
     "grunt-exorcise": "~2.1.0",
     "grunt-jsdoc": "^2.1.0",
     "grunt-sync": "~0.5.1",
+    "jsdoc": "^3.4.0",
+    "livereactload": "^3.0.0",
     "react-dropzone": "^3.3.4",
+    "react-proxy": "^1.1.8",
     "react-tools": "~0.13.3",
     "reactify": "~1.1.1",
     "redux-devtools": "~3.1.1",
     "redux-logger": "^2.5.2",
-    "watchify": "~3.7.0",
-    "grunt-eslint": "~19.0.0",
-    "babel-eslint": "~7.0.0",
-    "eslint-plugin-react": "~6.4.1"
+    "watchify": "^3.7.0"
   },
   "babelify": {
     "presets": [
