Fix naming collisions (Account vs Accountentity), add DB migration scripts

--- a/pom.xml
+++ b/pom.xml
@@ -382,6 +382,12 @@
         </dependency>
 
         <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-csv</artifactId>
+            <version>${apache.csv.version}</version>
+        </dependency>
+
+        <dependency>
             <groupId>org.flywaydb</groupId>
             <artifactId>flyway-core</artifactId>
             <version>4.0.1</version>
