--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-datetime": "^2.2.1",
     "react-dom": "~0.14.6",
     "react-echarts": "git+https://github.com/DAIAD/react-echarts.git#master",
+    "react-wiz": "git+https://github.com/DAIAD/react-wizard.git#master",
     "react-google-recaptcha": "^0.5.4",
     "react-grid-layout": "^0.12.7",
     "react-intl": "~2.0.0-rc-1",
@@ -60,6 +61,7 @@
     "babel": "~6.5.2",
     "babel-cli": "~6.16.0",
     "babel-core": "~6.17.0",
+    "babel-eslint": "~7.0.0",
     "babel-plugin-react-intl": "~2.2.0",
     "babel-plugin-react-transform": "^2.0.2",
     "babel-plugin-transform-regenerator": "~6.16.1",
@@ -67,8 +69,7 @@
     "babel-preset-latest": "~6.16.0",
     "babel-preset-react": "~v6.16.0",
     "babel-preset-stage-2": "~6.17.0",
-    "babel-eslint": "~7.0.0",
-    "babelify": "~7.3.0",
+    "babelify": "^7.3.0",
     "bootstrap": "^3.3.6",
     "browserify": "~13.0.0",
     "browserify-shim": "~3.8.12",
