Update user comparison and ranking
Removed unused dependencies from package.json.
Updated Gruntfile.js with changes made in package.json.
Minor updates to several classes that allow administrators with access to more than one utility to view and export data for all users in the utilities they have access to.
Updated water IQ database schema.
Removed comparison and ranking data from the profile.
Implemented comparison and ranking queries as a separate controller action.

--- a/package.json
+++ b/package.json
@@ -7,33 +7,23 @@
     "url": "https://github.com/DAIAD/home-web.git"
   },
   "dependencies": {
-    "bootstrap-daterangepicker": "2.1.17",
-    "bootstrap-select": "~1.9.4",
     "classnames": "^2.2.3",
     "clone": "~1.0.2",
     "echarts": "3.1.10",
     "es6-promise": "~3.0.2",
-    "events": "~1.1.0",
-    "flux": "~2.1.1",
     "history": "~2.0.0",
-    "intl": "^1.1.0",
     "isomorphic-fetch": "^2.2.1",
     "jquery": "^1.12.1",
     "keymirror": "~0.1.1",
     "leaflet": "^0.7.7",
-    "leaflet-choropleth": "^1.1.2",
     "leaflet-draw": "~0.2.3",
     "leaflet.heat": "~0.2.0",
     "lodash": "~4.0.1",
     "moment": "~2.11.2",
-    "moment-timezone": "^0.5.4",
     "numeral": "^1.5.3",
-    "object-assign": "~4.0.1",
     "react": "~0.14.6",
-    "react-addons-pure-render-mixin": "0.14.8",
     "react-bootstrap": "^0.28.2",
     "react-bootstrap-daterangepicker": "~1.0.6",
-    "react-bootstrap-datetimepicker": "0.0.22",
     "react-checkbox-group": "~1.0.4",
     "react-controls": "git+https://github.com/DAIAD/react-controls.git#master",
     "react-datetime": "^2.2.1",
@@ -51,7 +41,9 @@
     "react-select": "~1.0.0-beta9",
     "redux": "~3.3.1",
     "redux-thunk": "~1.0.3",
-    "sprintf": "^0.1.5"
+    "sprintf": "^0.1.5",
+    "font-awesome": "~4.6.3",
+    "react-dropzone": "^3.3.4"
   },
   "scripts": {
     "build": "NODE_ENV=production grunt build",
@@ -70,14 +62,11 @@
     "babel-preset-react": "~v6.16.0",
     "babel-preset-stage-2": "~6.17.0",
     "babelify": "^7.3.0",
-    "bootstrap": "^3.3.6",
     "browserify": "~13.0.0",
     "browserify-shim": "~3.8.12",
     "envify": "~3.4.0",
     "eslint-plugin-react": "~6.4.1",
     "eslintify": "^3.1.0",
-    "exorcist": "~0.4.0",
-    "font-awesome": "~4.6.3",
     "grunt": "~0.4.5",
     "grunt-apidoc": "~0.11.0",
     "grunt-browserify": "~4.0.1",
@@ -88,18 +77,11 @@
     "grunt-contrib-uglify": "~0.11.0",
     "grunt-contrib-watch": "~0.6.1",
     "grunt-eslint": "~19.0.0",
-    "grunt-exorcise": "~2.1.0",
     "grunt-jsdoc": "^2.1.0",
     "grunt-sync": "~0.5.1",
-    "jsdoc": "^3.4.0",
     "livereactload": "^3.0.0",
-    "react-dropzone": "^3.3.4",
-    "react-proxy": "^1.1.8",
-    "react-tools": "~0.13.3",
-    "reactify": "~1.1.1",
-    "redux-devtools": "~3.1.1",
     "redux-logger": "^2.5.2",
-    "watchify": "^3.7.0"
+    "react-proxy": "^1.1.8"
   },
   "babelify": {
     "presets": [
