Update user comparison and ranking data
When user comparison and ranking data is requested, the application returns daily data for all months, not just the last one.
Updated job builder classes. Moved some properties to the base class.

--- a/configuration/config/application.properties
+++ b/configuration/config/application.properties
@@ -80,3 +80,6 @@ daiad.amphiro.properties.cost-energy=1
 daiad.amphiro.properties.heating-system=0
 daiad.amphiro.properties.heating-efficiency=100
 daiad.amphiro.properties.share-of-solar=0
+
+# Internationalization (Spring Boot MessageSourceAutoConfiguration)
+spring.messages.basename=messages,mail-messages
