--- a/package.json
+++ b/package.json
@@ -20,10 +20,6 @@
     "isomorphic-fetch": "^2.2.1",
     "jquery": "^1.12.1",
     "keymirror": "~0.1.1",
-    "leaflet": "^0.7.7",
-    "leaflet-choropleth": "^1.1.2",
-    "leaflet-draw": "~0.2.3",
-    "leaflet.heat": "~0.2.0",
     "lodash": "~4.0.1",
     "moment": "~2.11.2",
     "moment-timezone": "^0.5.4",
@@ -39,7 +35,6 @@
     "react-datetime": "^2.2.1",
     "react-dom": "~0.14.6",
     "react-echarts": "git+https://github.com/DAIAD/react-echarts.git#master",
-    "react-wiz": "git+https://github.com/DAIAD/react-wizard.git#master",
     "react-google-recaptcha": "^0.5.4",
     "react-grid-layout": "^0.12.7",
     "react-intl": "~2.0.0-rc-1",
@@ -49,6 +44,8 @@
     "react-router-redux": "4.0.0",
     "react-scroll-up": "~1.1.2",
     "react-select": "~1.0.0-beta9",
+    "react-wiz": "git+https://github.com/DAIAD/react-wizard.git#master",
+    "react-leaflet-wrapper": "https://github.com/smanousopoulos/react-leaflet-wrapper-temp.git",
     "redux": "~3.3.1",
     "redux-thunk": "~1.0.3",
     "sprintf": "^0.1.5"
