--- a/package.json
+++ b/package.json
@@ -25,10 +25,11 @@
     "leaflet-draw": "~0.2.3",
     "leaflet.heat": "~0.2.0",
     "lodash": "~4.0.1",
-    "moment": "~2.11.2",
+    "moment": "^2.16.0",
     "moment-timezone": "^0.5.4",
     "numeral": "^1.5.3",
     "object-assign": "~4.0.1",
+    "rc-switch": "^1.4.2",
     "react": "~0.14.6",
     "react-addons-pure-render-mixin": "0.14.8",
     "react-bootstrap": "^0.28.2",
@@ -36,7 +37,7 @@
     "react-bootstrap-datetimepicker": "0.0.22",
     "react-checkbox-group": "~1.0.4",
     "react-controls": "git+https://github.com/DAIAD/react-controls.git#master",
-    "react-datetime": "^2.2.1",
+    "react-datetime": "git+https://github.com/layneanderson/react-datetime.git#master",
     "react-dom": "~0.14.6",
     "react-echarts": "git+https://github.com/DAIAD/react-echarts.git#master",
     "react-google-recaptcha": "^0.5.4",
