Enhance database-related configuration
 * Support arbitrary JPA or javax.persistence.* properties to configure
   an entity manager. These properties are loaded in a per-unit basis
   and will not interfere with each other or pollute global environment.

 * Support a flag to enable/disable Flyway migrations

--- a/.gitignore
+++ b/.gitignore
@@ -36,6 +36,8 @@ src/main/resources/log4j.properties
 src/main/resources/log4j2.xml
 src/main/resources/config
 
+generated-sql/
+
 apidoc/docs
 jsdoc/
 
