--- a/.gitignore
+++ b/.gitignore
@@ -34,6 +34,7 @@ jspm_packages
 
 src/main/resources/log4j.properties
 src/main/resources/log4j2.xml
+src/main/resources/log4j2-test.xml
 src/main/resources/config
 
 generated-sql/
