Override log configuration properties for tests

--- a/configuration/config/application-testing.properties
+++ b/configuration/config/application-testing.properties
@@ -29,3 +29,6 @@ security.white-list = true
 
 # Logging
 log4j2.logger.jdbc.enable = false
+
+# Log4j configuration properties
+logging.config=classpath:log4j2-test.xml
