Configure db migration scripts location for tests

--- a/configuration/config/application-testing.properties
+++ b/configuration/config/application-testing.properties
@@ -6,8 +6,12 @@ server.login.force-https = false
 
 # Flyway
 flyway.enabled = false
+
 daiad.flyway.baseline-version=1_0_0
-daiad.manager.flyway.baseline-version=1_0_0
+daiad.flyway.locations=classpath:db/migration/daiad/
+
+daiad.manager.flyway.baseline-version=1_0_2
+daiad.manager.flyway.locations=classpath:db/migration/daiad-manager/
 
 # Data source configuration
 datasource.default.driver-class-name = org.postgresql.Driver
