Make message generation optional per user
Minor updates to the test configuration.

--- a/configuration/config/application.properties
+++ b/configuration/config/application.properties
@@ -52,7 +52,7 @@ spring.http.multipart.max-file-size =20Mb
 spring.http.multipart.max-request-size=20Mb
 
 # Disable automatic database migration
-flyway.enabled=false
+flyway.enabled=true
 
 daiad.flyway.baseline-description= Database initialization
 daiad.flyway.baseline-version=1_0_0
