--- a/configuration/config/application-testing.properties
+++ b/configuration/config/application-testing.properties
@@ -5,7 +5,7 @@ server.port = 8081
 server.login.force-https = false
 
 # Flyway
-flyway.enabled = false
+flyway.enabled = true
 
 daiad.flyway.baseline-version=1_0_0
 daiad.flyway.locations=classpath:db/migration/daiad/
