Add server-side reCAPTCHA response validation

--- a/configuration/config/application.properties
+++ b/configuration/config/application.properties
@@ -29,7 +29,7 @@ security.basic.enabled=false
 spring.thymeleaf.cache=false
 
 # Temporary folder for storing files
-tmp.folder=/tmp/
+tmp.folder=/tmp
 
 # JPA configuration
 spring.jpa.database=POSTGRESQL
@@ -71,8 +71,10 @@ daiad.docs.require-authentication=true
 # Password reset token duration in hours
 daiad.password.reset.token.duration=3
 
-# The client site key for Google reCAPTCHA API
-daiad.captcha.google.key=
+# Google reCAPTCHA API keys
+daiad.captcha.google.url=
+daiad.captcha.google.site-key=
+daiad.captcha.google.secret-key=
 
 # Amphiro b1 default properties
 daiad.amphiro.properties.cost-water=1
