Review message generation service
  * Exclude resolvers by configuration
  * Fix corner cases (no messages for locale) in tip generation
  * Update sample configuration properties

--- a/configuration/config/application.properties
+++ b/configuration/config/application.properties
@@ -79,7 +79,9 @@ daiad.captcha.google.secret-key=
 # Message Generator
 daiad.message-generator.tips.enabled = true
 daiad.message-generator.alerts.enabled = true
+#daiad.message-generator.alerts.exclude-resolvers = alertDailyWaterBudget
 daiad.message-generator.recommendations.enabled = true
+#daiad.message-generator.recommendations.exclude-resolvers = recommendLowerFlow, recommendShampooChange
 
 # Amphiro b1 default properties
 daiad.amphiro.properties.cost-water=1
