Review message resolvers, tune behavior (WIP)

--- a/configuration/config/application.properties
+++ b/configuration/config/application.properties
@@ -77,11 +77,17 @@ daiad.captcha.google.site-key=
 daiad.captcha.google.secret-key=
 
 # Message Generator
+
 daiad.message-generator.tips.enabled = true
+
 daiad.message-generator.alerts.enabled = true
-#daiad.message-generator.alerts.exclude-resolvers = alertDailyWaterBudget
+daiad.message-generator.alerts.exclude-resolvers = \
+    alertWaterQuality, alertShowerOn, alertWaterChampion, alertWeeklyWaterSavings, \
+    alertDailyWaterBudget, alertWeeklyWaterBudget
+
 daiad.message-generator.recommendations.enabled = true
-#daiad.message-generator.recommendations.exclude-resolvers = recommendLowerFlow, recommendShampooChange
+daiad.message-generator.recommendations.exclude-resolvers = \
+    recommendReduceFlowWhenNotNeeded
 
 # Amphiro b1 default properties
 daiad.amphiro.properties.cost-water=1
