Add action API operations for reports

--- a/configuration/config/application.properties
+++ b/configuration/config/application.properties
@@ -77,7 +77,6 @@ daiad.captcha.google.site-key=
 daiad.captcha.google.secret-key=
 
 # Message Generator
-
 daiad.message-generator.tips.enabled = true
 
 daiad.message-generator.alerts.enabled = true
@@ -98,3 +97,6 @@ daiad.amphiro.properties.share-of-solar=0
 
 # Internationalization (Spring Boot MessageSourceAutoConfiguration)
 spring.messages.basename=messages,mail-messages
+
+# Report output path
+daiad.report.path=
