Add action API operations for spatial data

--- a/configuration/config/application.properties
+++ b/configuration/config/application.properties
@@ -100,3 +100,6 @@ spring.messages.basename=messages,mail-messages
 
 # Report output path
 daiad.report.path=
+
+# Spatial parameters
+daiad.spatial.neighbourhood.group=
