Update configuration options
Add setting for enabling CORS for action API when development profile is active.
Rename application setting (fixed typo).

--- a/configuration/config/application.properties
+++ b/configuration/config/application.properties
@@ -63,7 +63,7 @@ daiad.manager.flyway.baseline-version=1_0_2
 daiad.manager.flyway.locations=classpath:db/migration/daiad-manager/
 
 # Enforce constraints for Amphiro measurements
-daiad.amphiro.validation-string=true
+daiad.amphiro.validation-strict=true
 
 # Require authentication for documentation and project site
 daiad.docs.require-authentication=true
@@ -85,8 +85,7 @@ daiad.message-generator.alerts.exclude-resolvers = \
     alertDailyWaterBudget, alertWeeklyWaterBudget
 
 daiad.message-generator.recommendations.enabled = true
-daiad.message-generator.recommendations.exclude-resolvers = \
-    recommendReduceFlowWhenNotNeeded
+daiad.message-generator.recommendations.exclude-resolvers = recommendReduceFlowWhenNotNeeded
 
 # Amphiro b1 default properties
 daiad.amphiro.properties.cost-water=1
@@ -103,3 +102,9 @@ daiad.report.path=
 
 # Spatial parameters
 daiad.spatial.neighbourhood.group=
+
+# Enable CORS for action API
+daiad.cors.action.enable=false
+
+# Enables pre-aggregation for Data API
+daiad.data.api.pre-aggregation=true
