added react-ga dependency and pass google analytics ua code from config

--- a/configuration/config/application.properties
+++ b/configuration/config/application.properties
@@ -108,3 +108,7 @@ daiad.cors.action.enable=false
 
 # Enables pre-aggregation for Data API
 daiad.data.api.pre-aggregation=true
+
+#Home google analytics UA code
+daiad.home.ga.ua=
+
