Update configuration examples

--- a/config-example/config/application-testing.properties
+++ b/config-example/config/application-testing.properties
@@ -10,19 +10,11 @@ flyway.enabled = true
 daiad.flyway.baseline-version=1_0_0
 daiad.flyway.locations=classpath:db/migration/daiad/
 
-daiad.manager.flyway.baseline-version=1_0_2
-daiad.manager.flyway.locations=classpath:db/migration/daiad-manager/
-
 # Data source configuration
-datasource.default.driver-class-name = org.postgresql.Driver
-datasource.default.url = jdbc:postgresql://localhost:5432/daiad-test
-datasource.default.username =
-datasource.default.password =
-
-datasource.management.driver-class-name = org.postgresql.Driver
-datasource.management.url = jdbc:postgresql://localhost:5432/daiad-manager-test
-datasource.management.username =
-datasource.management.password =
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://localhost:5432/daiad-test
+spring.datasource.username=
+spring.datasource.password=
 
 spring.jpa.properties.hibernate.show_sql = false
 spring.jpa.properties.hibernate.format_sql = false
