--- a/config-example/config/application.properties
+++ b/config-example/config/application.properties
@@ -48,19 +48,8 @@ spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.Ph
 error-page=/error/403
 
 # Upload file limits
-spring.http.multipart.max-file-size =20Mb
+spring.http.multipart.max-file-size=20Mb
 spring.http.multipart.max-request-size=20Mb
-
-# Disable automatic database migration
-flyway.enabled=true
-
-daiad.flyway.baseline-description= Database initialization
-daiad.flyway.baseline-version=1_0_0
-daiad.flyway.locations=classpath:db/migration/daiad/
-
-daiad.manager.flyway.baseline-description= Database initialization
-daiad.manager.flyway.baseline-version=1_0_2
-daiad.manager.flyway.locations=classpath:db/migration/daiad-manager/
 
 # Enforce constraints for Amphiro measurements
 daiad.amphiro.validation-strict=true
@@ -86,7 +75,7 @@ daiad.message-generator.alerts.exclude-resolvers = \
 
 daiad.message-generator.recommendations.enabled = true
 daiad.message-generator.recommendations.exclude-resolvers = recommendReduceFlowWhenNotNeeded
-
+    
 # Amphiro b1 default properties
 daiad.amphiro.properties.cost-water=1
 daiad.amphiro.properties.cost-energy=1
@@ -109,6 +98,17 @@ daiad.cors.action.enable=false
 # Enables pre-aggregation for Data API
 daiad.data.api.pre-aggregation=true
 
-#Home google analytics UA code
+# Google Analytics for DAIAD@home client
 daiad.home.ga.ua=
 
+#
+# Flyway
+#
+
+flyway.enabled=true
+flyway.baseline-description=Database initialization
+flyway.baseline-version=0_0_0
+flyway.baseline-on-migrate=false 
+flyway.locations=classpath:db/migration/daiad/
+flyway.schemas=public,batch
+flyway.table=schema_version
